I added major elements of the assignment after evaluation. I have fusioned the two css I made and leave only the file rafting.css. And to teminer I added another image to avoid too much vacuum.

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -410,9 +410,6 @@ input, select, textarea {
     padding: 0.25rem;
     font-size: 0.9rem;
 }
-textarea {
-    
-}
 
 .activity {
     
